--- a/force-app/main/default/pages/SummitEvents.page
+++ b/force-app/main/default/pages/SummitEvents.page
@@ -96,9 +96,10 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             id: rawEventData.Id,
                             title: rawEventData.title,
                             url: rawEventData.eventUrl,
-                            start: rawEventData.start,
-                            end: rawEventData.end,
-                            description: rawEventData.description
+                            start: rawEventData.start.replace('Z',''),
+                            end: rawEventData.end.replace('Z',''),
+                            description: rawEventData.description,
+                            className: rawEventData.className,
                         };
                     },
                     eventDisplay: 'auto',
@@ -113,10 +114,10 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         }
                     },
                     eventContent: function (info) {
-                        let eventClass = "SummitEventsItem";
                         let audience = document.getElementById("audienceDD").value;
                         let wrap = document.createElement('div');
-                        wrap.classList.add(eventClass);
+                        //alert(info.event.className);
+                        wrap.classList.add(info.event.className);
                         let link = document.createElement('a');
                         link.href = info.event.url + '&audience=' + audience;
                         link.target = '_blank';
