--- a/force-app/main/default/pages/crowncollege2020.page
+++ b/force-app/main/default/pages/crowncollege2020.page
@@ -178,6 +178,34 @@
                 max-width: 99%;
             }
         </style>
+        <style>
+            .slds-scope .slds-form-element__label, .slds-scope:not(html), .slds-scope body, .slds-scope .slds-input, .slds-scope .slds-select{
+                font-size: 1.2rem;
+                line-height: 1.5rem;
+            }
+            .slds-scope .slds-form-element__label, .slds-scope .slds-breadcrumb__item {
+                font-size: 1.1rem!important;
+            }
+            .slds-scope .slds-input, .slds-scope .slds-select {
+                min-height: 2.6rem!important;
+            }
+            .slds-scope .slds-text-heading_medium {
+                font-size: 1.6rem!important;
+                margin-top: 1.4rem!important;
+            }
+            .slds-scope .slds-text-heading_large {
+                font-size: 2.2rem!important;
+            }
+            .slds-scope .slds-select {
+                padding:3px 5px 3px 5px!important;
+                background-image:none!important;
+            }
+            .slds-scope .slds-button_brand, .slds-scope .slds-button--brand {
+                margin-top: 1.5rem!important;
+                background-color:#5C068C!important;
+                border-color:#5C068C!important;
+            }
+        </style>
         <apex:insert name="scriptsHead"/>
     </head>
 
