--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -765,6 +765,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputPanel layout="none" rendered="{!IF(!ISBLANK(eventPage['Add_Info_Question_Text_' + q + '__c']),true, false)}">
                                     <apex:variable var="isRequired" value="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'required'),true, false)}"/>
                                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+
                                         <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">
 
                                             <apex:outputLabel for="{!'AddInfo' + q}" styleClass="slds-form-element__label">
@@ -778,7 +779,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                                                 <!--Text area -->
                                                 <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}">
-                                                    <apex:inputTextarea label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" styleClass="slds-input"/>
+                                                    <apex:inputTextarea label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" styleClass="slds-textarea"/>
                                                 </apex:outputPanel>
 
                                                 <!--Text box-->
