1) Added "Answer 2 Numeric" through "Answer 4 Numeric"; 2) Added "Source Object" field to "Summit Events Contact Matching Mapping" metadata type and updated code to use it; 3) Added "Location" global value set; 4) Added search layouts to all Summit Events objects

--- a/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
@@ -16,6 +16,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
+                <field>Source_Object__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
                 <field>Source_Value__c</field>
             </layoutItems>
             <layoutItems>
@@ -78,7 +82,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hP0000001cUGi</masterLabel>
+        <masterLabel>00h3F000002Zjfo</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
