Made validation rules for Custom Metadata

--- a/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Contact_Matching_Mapping__mdt-Summit Events Contact Matching Mapping Layout.layout-meta.xml
@@ -15,7 +15,7 @@
                 <field>Source_Type__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Source_Object__c</field>
             </layoutItems>
             <layoutItems>
@@ -82,7 +82,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3B000001ERKS</masterLabel>
+        <masterLabel>00h3F000002Zjfo</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
